--- a/css/styles.css
+++ b/css/styles.css
@@ -392,6 +392,9 @@ button {
   margin-bottom: 16px;
   font-weight: 500;
 }
+.site-footer .social {
+  margin-right: 80px;
+}
 .site-footer .social-list {
   gap: 16px;
   padding: 0;
@@ -399,9 +402,74 @@ button {
 .site-footer .social-link {
   margin: 0;
 }
+.subscribe-btn .icon {
+  fill: var(--white-bg);
+  margin-left: 16px;
+}
 .site-footer .social-link:hover,
 .site-footer .social-link:focus {
   background-color: var(--success);
 }
 
+.subscribe {
+  gap: 12px;
+}
+
+.subscribe-text {
+  color: var(--white-bg);
+  margin-bottom: 16px;
+  font-weight: 500;
+}
+
+.subscribe-form {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.subscribe-btn {
+  color: var(--white-bg);
+  background-color: var(--primary-brand);
+  border-radius: 4px;
+  padding: 8px 24px;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
+.subscribe-btn .icon {
+  fill: var(--white-bg);
+  margin-left: 16px;
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: var(--pressed-state);
+}
+
+.subscribe-email {
+  border: 1px solid var(--white-bg);
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  font-size: 12px;
+  color: var(--white-bg);
+  padding: 8px 16px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.subscribe-email::placeholder {
+  font-size: 12px;
+  color: var(--white-bg);
+}
 /* #endregion footer */
