--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,7 @@ button {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
 }
 
@@ -617,7 +618,8 @@ button {
   border-radius: 4px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: var(--subtle-text);
+  color: rgba(46, 47, 66, 0.4);
+  outline: transparent;
   background-color: transparent;
   border: 1px solid var(--modal-overlay);
   padding: 8px 16px;
@@ -630,16 +632,18 @@ button {
 }
 
 .label-privacy {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 24px;
+  display: block;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--subtle-text);
   user-select: none;
+}
+.privacy-form {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-bottom: 24px;
 }
 .privacy-link {
   margin-left: 4px;
@@ -651,10 +655,6 @@ button {
   color: var(--pressed-state);
 }
 .custom-checkbox-wrap {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -662,17 +662,17 @@ button {
   height: 16px;
   margin-right: 8px;
   border-radius: 2px;
-  border: 1.25px solid var(--modal-overlay);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-icon {
-  display: none;
+  opacity: 0;
 }
 .checkbox:checked + .label-privacy .custom-checkbox-wrap .checkbox-icon {
-  display: block;
+  opacity: 1;
 }
 .checkbox:checked + .label-privacy > .custom-checkbox-wrap {
   background-color: var(--pressed-state);
@@ -693,6 +693,7 @@ button {
 
   font-weight: 500;
   letter-spacing: 0.04em;
+  line-height: 1.5;
   color: var(--white-bg);
   background-color: var(--primary-brand);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
